Checking in bstell@netscape.com's patch for bug 95906, r=jag, sr=me, a=asa.