mozilla/intl/locale/src/unix/nsCollationUnix.cpp
@@ -221,8 +221,12 @@ nsresult nsCollationUnix::CreateRawSortKey(const nsCollationStrength strength,
     else {
       DoSetLocale();
       // call strxfrm to generate a key 
-      int len = strxfrm((char *) key, str, strlen(str));
+      ssize_t len = strxfrm((char *) key, str, *outLen);
       DoRestoreLocale();
+      if ((size_t)len >= *outLen) {
+        res = NS_ERROR_FAILURE;
+        len = -1;
+      }
       *outLen = (len == -1) ? 0 : (PRUint32)len;
     }
     PR_Free(str);
